--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ p {
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -167,6 +167,7 @@ p {
   color: var(--txt-col);
 }
 
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -178,6 +179,13 @@ p {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/img/studio.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .slogan {
