--- a/css/styles.css
+++ b/css/styles.css
@@ -119,8 +119,6 @@ p {
 
 .list-nav {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
   gap: 50px;
 }
 
@@ -153,6 +151,7 @@ p {
   color: var(--txt-col);
   padding-top: 32px;
   padding-bottom: 32px;
+  text-decoration: none;
 }
 
 .link-mail:hover,
@@ -171,6 +170,7 @@ p {
   color: var(--txt-col);
   padding-top: 32px;
   padding-bottom: 32px;
+  text-decoration: none;
 }
 .smartphone {
   fill: currentColor;
@@ -190,9 +190,7 @@ p {
 .contacts-list {
   display: flex;
   margin-left: auto;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
+  }
 
 .contacts-list .list-item + .list-item {
   margin-left: 50px;
@@ -225,6 +223,7 @@ p {
     url(../images/img/studio.jpg);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .slogan {
@@ -536,12 +535,25 @@ p {
   color: var(--subtitle-col);
   cursor: pointer;
   border-color: transparent;
+  border: none;
+  padding: 6px 22px;
+  border-radius: 4px;
 }
 
 .filtr-list {
   display: flex;
   gap: 8px;
   justify-content: center;
+}
+
+.projects-item {
+  text-decoration: none;
+  display: block;
+}
+
+.projects-item:hover,
+.projects-item:focus {
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 25%);
 }
 
 .photo-list {
